# APF-Paper-0-What-Physics-Permits

./: APF_Reviewer_Walkthrough.ipynb  Paper_0_What_Physics_Permits_v3.0.tex  README.md  REVIEWERS_GUIDE.md  START_HERE.md  derivation_graph.json  pyproject.toml  repo_map.json  run_checks.py  theorems.json  zenodo.json
ai_context/: AGENTS.md  ARGUMENT_FLOW.md  CITING.md  CLAIMS_LEDGER.md  DO_NOT_CLAIM.md  FRAMEWORK_OVERVIEW.md  HOW_TO_VERIFY.md  LANGUAGE_CONVENTION.md  LOCAL_VS_IMPORTED.md  PAPER_LINEAGE.md  STARTING_PROMPTS.md  THEOREMS.md  derivation_graph.json  repo_map.json  theorems.json
apf/: __init__.py  bank.py  core.py
docs/: index.html
