[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apf-paper0"
version = "3.0"
description = "What Physics Permits — executable mathematical appendix"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
  {name = "Ethan Brooke", email = "brooke.ethan@gmail.com"}
]
keywords = ["ontology of physics", "constraint-first physics", "admissibility", "enforcement cost", "variational principles", "Principle of Least Enforcement Cost"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20", "scipy>=1.7"]

[project.urls]
Homepage = "https://github.com/Ethan-Brooke/APF-Paper-0-What-Physics-Permits"
"Bug Tracker" = "https://github.com/Ethan-Brooke/APF-Paper-0-What-Physics-Permits/issues"
"Zenodo" = "https://doi.org/10.5281/zenodo.18605692"

[tool.setuptools.packages.find]
include = ["apf*"]
